kubernetes/201/08.istio-tutorial/k8s/customer-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: customer
    version: v1
  name: customer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer
      version: v1
  template:
    metadata:
      labels:
        app: customer
        version: v1
    spec:
      containers:
      - env:
        - name: JAVA_OPTIONS
          value: -Xms128m -Xmx256m -Djava.net.preferIPv4Stack=true -Djava.security.egd=file:///dev/./urandom
        image: spiddy/istio-tutorial-customer:v1
        imagePullPolicy: IfNotPresent
        livenessProbe:
          exec:
            command:
            - curl
            - 127.0.0.1:8080/health
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 1
        name: customer
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        readinessProbe:
          exec:
            command:
            - curl
            - 127.0.0.1:8080/health
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 1
        securityContext:
          privileged: false
