kubernetes/201/08.istio-tutorial/k8s/recommendation-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: recommendation
    version: v1
  name: recommendation-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recommendation
      version: v1
  template:
    metadata:
      labels:
        app: recommendation
        version: v1
    spec:
      containers:
      - env:
        - name: JAVA_OPTIONS
          value: -Xmx256m
        image: spiddy/istio-tutorial-recommendation:v1
        imagePullPolicy: IfNotPresent
        livenessProbe:
          exec:
            command:
            - curl
            - 127.0.0.1:8080/health
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 1
        name: recommendation
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        readinessProbe:
          exec:
            command:
            - curl
            - 127.0.0.1:8080/health
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 1
        securityContext:
          privileged: false
